# tinychat

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  models.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
app/: app.py
app/static/: index.css  index.html  index.js
fastapi/: Dockerfile  docker-compose.yaml  requirements.txt
fastapi/app/: app.py
fastapi/app/static/: index.html  style.css
streamlit/: Dockerfile  docker-compose.yaml
streamlit/app/: app.py
