[project]
name = "TinyChat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "firecrawl-py>=1.12.0",
    "litellm>=1.61.16",
    "openai>=1.64.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]
