[project]
name = "TinyChat"
version = "0.2.0"
description = "Very tiny FastAPI chat for LLM with tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "firecrawl-py>=1.12.0",
    "httpx>=0.28.1",
    "openai>=1.64.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]
